v3.8.7 (XXXX-XX-XX)
-------------------

* Updated OpenSSL to 1.1.1o and OpenLDAP to 2.6.2.

* Added option `--enable-revision-trees` to arangorestore, which will add the
  attributes `syncByRevision` and `usesRevisionsAsDocumentIds` to the collection
  structure if they are missing. As a consequence, these collections created by
  arangorestore will be able to use revision trees and a faster getting-in-sync
  procedure after a restart. The option defaults to `true`, meaning the
  attributes will be added if they are missing. If the option is set to `false`,
  the attributes will not be added to the collection structure.
  If the attributes are already present in the dump data, they will not be
  modified by arangorestore irrespective of the setting of this option.

* Updated arangosync to v2.9.1.

* Make sure that newly created TTL indexes do not use index estimates, which
  wouldn't be used for TTL indexes anyway.

* Bump the number of RocksDB transaction lock stripes to at least 16, if the
  number of cores is lower than that value.

* Increase internal transaction lock timeout on followers during cluster write
  operations. Although writes to the same keys on followers should be serialized
  by the key locks held on the leader, it is still possible that the global
  transaction lock striped mutex is a source of contention and that concurrent
  write operations time out while waiting to acquire this global mutex. The lock
  timeout on followers is now significantly increased to make this very
  unlikely.

* Improve validation for variables used in the `KEEP` part of AQL COLLECT
  operations. Previously referring to a variable that was introduced by the
  COLLECT itself from out of the KEEP part triggered an internal error. The case
  is detected properly now and handled with a descriptive error message.

* Fix deadlocked shard synchronisations when planned shard leader has not yet
  taken over leadership.
